# cikgu-online

./: .env.example  .gitignore  Dockerfile.web  Dockerfile.worker  alembic.ini  auth.py  docker-compose.yml  generate_vapid_keys.py  hello.py  init_db.py  models.py  nixpacks.toml  notification_service.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_migration.py  tailwind.config.js
alembic/: env.py
app/: __init__.py
app/alembic/: env.py
app/alembic/versions/: 001_initial_tables.py
app/auth/: __init__.py  auth.py
app/models/: __init__.py  models.py
app/routes/: __init__.py  hello.py
app/services/: __init__.py
app/tasks/: __init__.py  worker.py
static/css/: style.css
static/js/: htmx-utils.js  main.js
static/src/: input.css
templates/: about.html  base.html  chapter.html  dashboard.html  footer.html  header.html  htmx_components.html  htmx_examples.html  index.html  login.html  mcq_assessment.html  progress.html  subject_detail.html  subjective_assessment.html  subjects.html  upload.html
