[project]
name = "cikgu"
version = "0.1.0"
description = "Online learning platform for Malaysia's SPM lessons"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "cryptography>=46.0.1",
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "gunicorn>=21.2.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.0.0",
    "redis>=5.0.1",
    "requests>=2.31.0",
    "rq>=1.16.2",
    "werkzeug>=3.0.1",
    "pywebpush>=2.0.3",
]
